# CLOCK

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: fortran_build.yml
data/: test_image_credits.txt
scripts/: get_colourLegend.py  get_scalebar.py  plot_count_histogram.plt
src/: CMakeLists.txt
src/BFDF/: AnalysePngHistogram.f90  CMakeLists.txt
src/CLOCK/: CMakeLists.txt  Lib_DataDoubler.f90  Lib_FFTW3f.F90  Lib_FitGaussians1d.f90  Lib_Gaussian2d.F90  Lib_GoldenSection.F90  Lib_Graphs.f90  Lib_Kernels.f90  Lib_Maxima2d.F90  Lib_MultipleGaussians2d.F90  Lib_Splines1.f90  Lib_Stats.f90
src/CLOCK_Img/: CMakeLists.txt  Lib_ConjugateGradient.F90  Lib_Exteriors.F90  Lib_ExtrapolateImage.F90  Lib_GaussianBlurs.F90  Lib_ImageCorrelationFunction.f90  Lib_ImageTools.f90  Lib_LaplacianKernel.f90  Lib_LaplacianKernel_data.h  Lib_LaplacianOfGaussians.F90  Lib_LocalFilter2d.F90  Lib_LowPassFilter3d.F90  Lib_MaxLikelihoodFilter.f90  Lib_Radon.f90  Lib_RidlerCalvard.F90
src/CLOCK_Png/: CMakeLists.txt  Lib_ColourScale.f90  Lib_Greyscale.c  Lib_Png.F90
src/CLOCK_Utils/: CMakeLists.txt  Lib_Callipers.f90  Lib_ColouredTerminal.f90  Lib_CommandLineArguments.f90  Lib_Filenames.f90  Lib_Quicksort.f90  Lib_RandomSeed.f90  Lib_SimpleProgressBar.f90  NBAX_StringTokenizers.f90
src/Count/: CMakeLists.txt  analyseSpots.f90  countSpots.f90
src/Flat/: CMakeLists.txt  flattenBackground.f90
src/Linear/: CMakeLists.txt  LinearFeatureDetect.f90  linearFeatures.f90
src/MLE_Filter/: CMakeLists.txt  MLEFilter.F90
src/SaltAndPepperFilter/: CMakeLists.txt  saltAndPepperFilter.F90
test/: CMakeLists.txt  testBoilerPlate.f90  test_Lib_ConjugateGradient.f90
test/integration/: CMakeLists.txt  testBfdf.sh  testCount.sh  testFilter.f90  testFlatten.f90  testLib_Filenames.f90  testLib_GoldenSection.f90  testLib_Quicksort.f90  testNBAX_StringTokenizers.f90  testPng.f90  testRadon.f90  testRandC.f90  test_MLEFilter.f90  test_saltandpepperfilter.f90
test/test_Utils/: CMakeLists.txt  Lib_UtilsForTests.f90
test/unit/: CMakeLists.txt  canRunBin.sh  testLib_Callipers.f90  testLib_ColourScale.f90  testLib_ColouredTerminal.f90  testLib_CommandLineArguments.f90  testLib_Graphs.f90  testLib_ImageTools.f90  testLib_RandomSeed copy.f90  testLib_RandomSeed.f90  testLib_Stats.f90
